# monday_grabber

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: queries.yaml
kubernetes/: cronjob.yaml  job.yaml  secret.yaml
src/monday_grabber/: __init__.py  __main__.py
src/monday_grabber/client/: __init__.py  monday_client.py  response_handler.py
src/monday_grabber/config/: __init__.py  config_loader.py
src/monday_grabber/core/: __init__.py  abc.py  exceptions.py  logging_config.py  types.py
src/monday_grabber/graphql/: __init__.py  pagination.py  query_executor.py  query_loader.py  response_parser.py
src/monday_grabber/parser/: __init__.py  table_parser.py
src/monday_grabber/parser/writers/: __init__.py  base.py  csv_writer.py  factory.py  json_writer.py  parquet_writer.py  protocol.py
src/monday_grabber/queries/: get_board_info.graphql  get_board_items.graphql
